fix some idiot bug

--- a/templates/allHotel.html
+++ b/templates/allHotel.html
@@ -25,11 +25,11 @@
     </script>
     <meta content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" name="robots">
     <!-- This site is optimized with the Yoast SEO Premium plugin v18.4 (Yoast SEO v18.6) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Combo Hoàng Hôn Bà Nà - Web du lịch Đà Nẵng - Tour du lịch Đà Nẵng %</title>
+    <title>Tất cả khách sạn</title>
     <meta content="Est. reading time" name="twitter:label1" />
     <meta content="2 minutes" name="twitter:data1" />
     <script class="yoast-schema-graph"
-        type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://webdulichdanang.com/#organization","name":"Web Du Lịch Đà Nẵng","url":"https://webdulichdanang.com/","sameAs":["https://www.facebook.com/webdulichdanang","https://instagram.com/webdulichdanang","https://www.youtube.com/channel/UCdWhhXFSbisj6ZOxsJWHOSA","https://www.instagram.com/webdulichdanang/","https://twitter.com/webdulichdanang"],"logo":{"@type":"ImageObject","@id":"https://webdulichdanang.com/#logo","inLanguage":"en-US","url":"https://webdulichdanang.com/wp-content/uploads/2016/08/logo300.png","contentUrl":"https://webdulichdanang.com/wp-content/uploads/2016/08/logo300.png","width":300,"height":300,"caption":"Web Du Lịch Đà Nẵng"},"image":{"@id":"https://webdulichdanang.com/#logo"}},{"@type":"WebSite","@id":"https://webdulichdanang.com/#website","url":"https://webdulichdanang.com/","name":"Web du lịch Đà Nẵng - Tour du lịch Đà Nẵng","description":"Tất tần tật về thông tin du lịch Đà Nẵng","publisher":{"@id":"https://webdulichdanang.com/#organization"},"potentialAction":[{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://webdulichdanang.com/?s={search_term_string}"},"query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#primaryimage","inLanguage":"en-US","url":"https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg","contentUrl":"https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg","width":800,"height":533},{"@type":"WebPage","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#webpage","url":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na","name":"Combo Hoàng Hôn Bà Nà - Web du lịch Đà Nẵng - Tour du lịch Đà Nẵng %","isPartOf":{"@id":"https://webdulichdanang.com/#website"},"primaryImageOfPage":{"@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#primaryimage"},"datePublished":"2020-02-13T16:02:40+00:00","dateModified":"2024-02-29T01:06:43+00:00","description":"Vé Combo Hoàng Hôn trên Bà Nà Hills với khung giờ đặc biệt đón quý khách ngắm hoàng hôn tuyệt đẹp trên đỉnh Bà Nà","breadcrumb":{"@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://webdulichdanang.com/tour/combo-hoang-hon-ba-na"]}]},{"@type":"BreadcrumbList","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://webdulichdanang.com/"},{"@type":"ListItem","position":2,"name":"Tours","item":"https://webdulichdanang.com/tour"},{"@type":"ListItem","position":3,"name":"Combo Hoàng Hôn Bà Nà"}]}]}</script>
+        type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://webdulichdanang.com/#organization","name":"Web Du Lịch Đà Nẵng","url":"https://webdulichdanang.com/","sameAs":["https://www.facebook.com/webdulichdanang","https://instagram.com/webdulichdanang","https://www.youtube.com/channel/UCdWhhXFSbisj6ZOxsJWHOSA","https://www.instagram.com/webdulichdanang/","https://twitter.com/webdulichdanang"],"logo":{"@type":"ImageObject","@id":"https://webdulichdanang.com/#logo","inLanguage":"en-US","url":"https://webdulichdanang.com/wp-content/uploads/2016/08/logo300.png","contentUrl":"https://webdulichdanang.com/wp-content/uploads/2016/08/logo300.png","width":300,"height":300,"caption":"Web Du Lịch Đà Nẵng"},"image":{"@id":"https://webdulichdanang.com/#logo"}},{"@type":"WebSite","@id":"https://webdulichdanang.com/#website","url":"https://webdulichdanang.com/","name":"Web du lịch Đà Nẵng - Tour du lịch Đà Nẵng","description":"Tất tần tật về thông tin du lịch Đà Nẵng","publisher":{"@id":"https://webdulichdanang.com/#organization"},"potentialAction":[{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://webdulichdanang.com/?s={search_term_string}"},"query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#primaryimage","inLanguage":"en-US","url":"https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg","contentUrl":"https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg","width":800,"height":533},{"@type":"WebPage","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#webpage","url":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na","name":"Tất cả địa điểm","isPartOf":{"@id":"https://webdulichdanang.com/#website"},"primaryImageOfPage":{"@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#primaryimage"},"datePublished":"2020-02-13T16:02:40+00:00","dateModified":"2024-02-29T01:06:43+00:00","description":"Vé Combo Hoàng Hôn trên Bà Nà Hills với khung giờ đặc biệt đón quý khách ngắm hoàng hôn tuyệt đẹp trên đỉnh Bà Nà","breadcrumb":{"@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://webdulichdanang.com/tour/combo-hoang-hon-ba-na"]}]},{"@type":"BreadcrumbList","@id":"https://webdulichdanang.com/tour/combo-hoang-hon-ba-na#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://webdulichdanang.com/"},{"@type":"ListItem","position":2,"name":"Tours","item":"https://webdulichdanang.com/tour"},{"@type":"ListItem","position":3,"name":"Combo Hoàng Hôn Bà Nà"}]}]}</script>
     <!-- / Yoast SEO Premium plugin. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//www.google.com" rel="dns-prefetch" />
@@ -152,16 +152,21 @@
 </head>
 
 <body class="archive post-type-archive post-type-archive-hotel wpb-js-composer js-comp-ver-6.9.0 vc_responsive">
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
 	<div class="layer"></div>
 	<header class="plain">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-sm-3 col-xs-3">
-					<div id="logo">
-						<a href="#"><img alt="City tours" class="logo_normal" data-retina="true" height="34"
-								src="/static/images/logo-ngang.webp" width="100%" height="100%" /></a>
-						<a href="#"><img alt="City tours" class="logo_sticky" data-retina="true" height="34"
-								src="/static/images/logo-ngang.webp" width="100%" height="100%" /></a>
+					<div id="logo" >
+						<img alt="City tours" class="logo_normal" data-retina="true" height="34"
+								src="/static/images/logo-ngang.webp" width="100%" height="100%" />
+						<img alt="City tours" class="logo_sticky" data-retina="true" height="34"
+								src="/static/images/logo-ngang.webp" width="100%" height="100%" />
 					</div>
 				</div>
 				<nav class="col-md-9 col-sm-9 col-xs-9">
@@ -175,28 +180,16 @@
 						<div class="menu-menu-chinh-container">
 							<ul class="menu" id="menu-menu-chinh">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1455"
-									id="menu-item-1455"><a aria-current="page" href="{{url_for('MainPage')}}">Home</a></li>
+									id="menu-item-1455"><a aria-current="page" href="/">Home</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1457"
-									id="menu-item-1457"><a href="#">Hotels</a></li>
-								<li class="menu-item menu-item-type-post_type menu-item-object-page 1menu-item-2201"
-									id="menu-item-2201"><a href="#">Blog</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2451"
-									id="menu-item-2451"><a href="#">Địa điểm</a></li>
-								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478"
-									id="menu-item-1478"><a href="#">Liên hệ</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1458"
-									id="menu-item-1458"><a>Trợ giúp</a>
-									<ul class="sub-menu">
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"
-											id="menu-item-1495"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
-										</li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1484"
-											id="menu-item-1484"><a href="#">Hướng dẫn du
-												lịch</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1479"
-											id="menu-item-1479"><a href="#">Hỏi
-												đáp</a></li>
-									</ul>
+									id="menu-item-1457"><a href="/all/place">Places</a></li>
+								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2201"
+									id="menu-item-2201"><a href="#blog">Blog</a></li>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1458"
+									id="menu-item-1458"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+								</li>
+								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478 logout-menu-item" id="menu-item-1478">
+									<a href="/logout">Đăng xuất</a>
 								</li>
 							</ul>
 						</div>
@@ -262,17 +255,17 @@
 							<h6>GIÁ</h6>
 							<ul class="list-filter price-filter" data-arg="price_filter"
 								data-base-url="/hotel?view=list">
-								<li><label><input name="price_filter[]" id="0" type="radio" value="0" /> 0đ - 1.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="1" type="radio" value="1" /> 1.000.000đ - 2.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="2" type="radio" value="2" /> 2.000.000đ - 3.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="3" type="radio" value="3" /> 3.000.000đ - 4.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="4" type="radio" value="4" /> 4.000.000đ - 5.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="5" type="radio" value="5" /> 5.000.000đ - 6.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="6" type="radio" value="6" /> 6.000.000đ - 7.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="7" type="radio" value="7" /> 7.000.000đ - 8.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="8" type="radio" value="8" /> 8.000.000đ - 9.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="9" type="radio" value="9" /> 9.000.000đ - 10.000.000đ</label></li>
-								<li><label><input name="price_filter[]" id="10" type="radio" value="10" /> 10.000.000đ+</label></li>
+								<li><label><input name="price_filter[]" id="0" type="radio" value="0" />  0đ - 1.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="1" type="radio" value="1" />  1.000.000đ - 2.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="2" type="radio" value="2" />  2.000.000đ - 3.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="3" type="radio" value="3" />  3.000.000đ - 4.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="4" type="radio" value="4" />  4.000.000đ - 5.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="5" type="radio" value="5" />  5.000.000đ - 6.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="6" type="radio" value="6" />  6.000.000đ - 7.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="7" type="radio" value="7" />  7.000.000đ - 8.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="8" type="radio" value="8" />  8.000.000đ - 9.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="9" type="radio" value="9" />  9.000.000đ - 10.000.000đ</label></li>
+								<li><label><input name="price_filter[]" id="10" type="radio" value="10" />  10.000.000đ+</label></li>
 							</ul>
 							<button type="button" id="search-button" class="btn btn-success btn-lg">Search</button>
 						</div>
@@ -323,7 +316,7 @@
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1909"
 									id="menu-item-1909"><a href="#">Blog</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2694"
-									id="menu-item-2694"><a href="#">Địa điểm</a></li>
+									id="menu-item-2694"><a href="#">Places</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1910"
 									id="menu-item-1910"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1289"
@@ -344,7 +337,7 @@
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2695"
 									id="menu-item-2695"><a href="#">Hướng Dẫn</a></li>
 								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1914"
-									id="menu-item-1914"><a href="#">Địa Điểm</a></li>
+									id="menu-item-1914"><a href="#">Places</a></li>
 								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1916"
 									id="menu-item-1916"><a href="#">Đặc Sản</a></li>
 								
